Add note how to run locale sensitive unit test
Some unit test checking locale sensitive functionality require the
-Djava.locale.providers=SPI,COMPAT flag to be set. When running tests though
gradle we pass this already to the BuildPlugin, but running from the IDE this
might need to be set manually. Adding a note explaining this to the
CONTRIBUTING.md doc and leave a note on
SearchQueryIT.testRangeQueryWithLocaleMapping which is a test we know suffers
from this.